--- a/public/encrypt.html
+++ b/public/encrypt.html
@@ -19,20 +19,19 @@
             <input type="text" id="passphrase1" />
             <br />
             <label for="goBtn">3. </label>
-            <button id="goBtn" type="button">Encrypt audio</button>
+            <button id="goBtn" type="button">Encrypt the audio</button>
             <br />
             <label for="dlEnc">4. </label>
-            <button id="dlEnc" type="button">Download encrypted audio file</button>
-            <button id="dlKey" type="button">Download key file</button>
+            <button id="dlEnc" type="button">Download the encrypted audio file</button>
+            <button id="dlKey" type="button">Download the key (a hashed base64 string)</button>
         </form>
         <div>
             <br />
             <div>
+                <br />
+                <br />
+                <br />
                 <p id="keyInfo" style="white-space: pre-wrap;"></p>
-                <br />
-                <br />
-                <br />
-                <p style="font-size: 0.7em;">To decrypt the audio, you will need:<br />&nbsp;&nbsp;&nbsp;a. The encrypted file<br />&nbsp;&nbsp;&nbsp;b. The key file<br />&nbsp;&nbsp;&nbsp;c. The passphrase</p>
                 <br />
                 <br />
                 <br />
