--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 	<body>
         <br />
         <br />
-        <p>/encrypt.html </p>
+        <a href="encrypt.html">Encrypt demo</a>
         <br />
-        <p>/decrypt.html </p>
+        <a href="decrypt.html">Decrypt demo </a>
     </body>
 </html>
