the key is kept server side

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 	    <title>Subtle crypto test</title>
 	</head>
 	<body>
+        <p>The challenge was to create an audio file for an exam so that nobody would care if it got lost or was left accidentally on a classroom computer.<br />The base64 key is a downloadable file only for the purpose of the demo.</p>
         <br />
         <br />
         <a href="encrypt.html">Encrypt demo</a>
