--- a/public/decrypt.html
+++ b/public/decrypt.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />        
 	    <meta name="viewport" content="width=device-width initial-scale=1.0 minimum-scale=1.0 maximum-scale=1.0 user-scalable=no" />
         <style>
-            .hide { display: none; }
+            #playBtn.hide { display: none; }
         </style>
 	    <title>Decrypt audio</title>
 	</head>
@@ -30,7 +30,7 @@
         <div>
             <br />
             <br />
-            <button id="playbtn" type="button" class="hide">PLAY AUDIO</button>
+            <button id="playBtn" type="button" class="hide">PLAY AUDIO</button>
         </div>
     </body>
 <script src="dec.js"></script>
