--- a/public/decrypt.html
+++ b/public/decrypt.html
@@ -14,7 +14,7 @@
         <br />
         <p>Decrypt audio</p>
         <hr />
-        <form>
+        <form id="decForm">
             <label for="uploadEnc">1. Upload the encrypted audio file: </label>
             <input type="file" id="uploadEnc" />
             <br />
