--- a/public/encrypt.html
+++ b/public/encrypt.html
@@ -11,7 +11,7 @@
         <br />
         <p>Encrypt audio</p>
         <hr />
-        <form>
+        <form id="encForm">
             <label for="uploadAud">1. Upload an unencrypted audio file: </label>
             <input type="file" id="uploadAud" />
             <br />
