--- a/public/encrypt.html
+++ b/public/encrypt.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />        
 	    <meta name="viewport" content="width=device-width initial-scale=1.0 minimum-scale=1.0 maximum-scale=1.0 user-scalable=no" />
 	    <title>Encrypt audio</title>
+        <link rel="icon" type="image/x-icon" href="/public/images/favicon.ico">
 	</head>
 	<body>
         <br />
