--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />        
 	    <meta name="viewport" content="width=device-width initial-scale=1.0 minimum-scale=1.0 maximum-scale=1.0 user-scalable=no" />
 	    <title>Subtle crypto test</title>
+        <link rel="icon" type="image/x-icon" href="/public/images/favicon.ico">
 	</head>
 	<body>
         <p>The challenge was to create an audio file for an exam so that nobody would care if it got lost or was left accidentally on a classroom computer.<br />The base64 key is a downloadable file only for the purpose of the demo.</p>
