--- a/public/decrypt.html
+++ b/public/decrypt.html
@@ -4,11 +4,12 @@
 	    <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />        
 	    <meta name="viewport" content="width=device-width initial-scale=1.0 minimum-scale=1.0 maximum-scale=1.0 user-scalable=no" />
+	    <title>Decrypt audio</title>
+        <link rel="icon" type="image/x-icon" href="/public/images/favicon.ico">
         <style>
             #playBtn.hide { display: none; }
         </style>
-	    <title>Decrypt audio</title>
-	</head>
+    </head>
 	<body>
         <br />
         <br />
