--- a/src/encrypt/encrypt.html
+++ b/src/encrypt/encrypt.html
@@ -46,7 +46,7 @@
                         <button type="button" id="key-dl" class="btn btn-sm btn-outline-primary"><i class="icon-download-alt"></i></button>
                         <span>Download decryption key</span>
                         <br />
-                        <span class="small fw-light fst-italic">N.B. Do not rename the key.</span>
+                        <span class="small-625 fw-light">Do not rename the file that contains the key.</span>
                     </div>
                 </div>
                 <div class="row g-3">
