--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
             <div class="col-1"></div>
             <div class="col-10">
                 <div id="audio-player"></div>
+                <span id="audio-nb" class="small-625 fw-light"></span>
             </div>
         </div>
     </div>
