--- a/demo/encrypt/index.html
+++ b/demo/encrypt/index.html
@@ -19,7 +19,7 @@
                                 <input type="file" id="up-aud" class="d-none" />
                             </div>
                             <div class="mb-3">
-                                <label for="pass1" class="form-label-sm">Enter passphrase</label>
+                                <label for="pass1" class="form-label-sm">Create passphrase</label>
                                 <input type="password" id="pass1" class="form-control" />
                             </div>
                             <div class="mb-3">
